# PhotoGallery

./: .gitignore  README.md  config.py  generator.py  pyproject.toml
Archive/: about.html  coding.html  faq.html  index.html  info_amazon.html  info_apple.html  info_facebook.html  info_google.html  info_microsoft.html  info_uber.html  interview.html  material.html
src/: config.py  generator.py  main.py  template.py
src/templates/: master.bak  master.html
