[project]
name = "photo-album"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Pillow>=12.3.0",
    "requests>=2.34.2",
    "types-Pillow"
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "types-requests>=2.33.0.20260518",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
